--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,21 @@
 {
-    "name": "Shunya Codex",
-    "short_name": "Shunya",
+    "name": "Shunya Codex Interaktif",
+    "short_name": "Shunya Codex",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#111827",
-    "theme_color": "#4a352a",
-    "description": "Petunjuk Keberlimpahan Sejati Tanpa Batas Tanpa Beban di Era AI",
+    "background_color": "#2c1e18",
+    "theme_color": "#2c1e18",
+    "description": "Petunjuk Hidup Berkelimpahan Tanpa Batas Tanpa Beban di Era AI.",
     "icons": [
         {
-            "src": "https://www.dropbox.com/scl/fi/exxa099kw3gtxemtxq4as/AxAwWE01.svg?rlkey=h2o1j8uwv5jp91w224gcg7u9p&st=7ehi0f8k&dl=1",
+            "src": "https://i.imgur.com/gOKdYgK.jpg",
             "sizes": "192x192",
-            "type": "image/svg+xml"
+            "type": "image/jpeg"
         },
         {
-            "src": "https://www.dropbox.com/scl/fi/exxa099kw3gtxemtxq4as/AxAwWE01.svg?rlkey=h2o1j8uwv5jp91w224gcg7u9p&st=7ehi0f8k&dl=1",
+            "src": "https://i.imgur.com/gOKdYgK.jpg",
             "sizes": "512x512",
-            "type": "image/svg+xml"
+            "type": "image/jpeg"
         }
     ]
 }
